add tilte and delete header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Leon template one</title>
+		<title>Mohamed Adel</title>
 		<!-- Main Tempalte CSS File -->
 		<link rel="stylesheet" href="CSS/main - Copy.css" />
 		<!-- Rendar All Elements Normally -->
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<!-- start Header -->
-		<div class="header">
+		<!-- <div class="header">
 			<div class="container">
 				<img class="logo" src="Images/logo.png" alt="" />
 				<div class="links">
@@ -37,7 +37,7 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- End Header -->
 
 		<!--  Start CV Header  -->
