--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<!-- start Header -->
-		<!-- <div class="header">
+		<div class="header">
 			<div class="container">
 				<img class="logo" src="Images/logo.png" alt="" />
 				<div class="links">
@@ -29,15 +29,15 @@
 						<span></span>
 						<span></span>
 					</span>
-					<ul>
+					<!-- <ul>
 						<li><a href="#services">Services</a></li>
 						<li><a href="#Portfolio">Portfolio</a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#contact">Contact</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<!-- End Header -->
 
 		<!--  Start CV Header  -->
@@ -224,6 +224,6 @@
 		<div class="footer">&copy; 2024 - <span>Leon</span>,All Right Reserved</div>
 		<!-- End Footer -->
 		<!--  Java Script  -->
-		<script src="JS/Leon.js"></script>
+		<!-- <script src="JS/Leon.js"></script> -->
 	</body>
 </html>
