--- a/index.html
+++ b/index.html
@@ -207,14 +207,28 @@
 
 				<ul>
 					<li>C#</li>
-					<li>JavaScript</li>
 					<li>C++</li>
+					<li>JavaScript</li>
 					<li>SQL</li>
+				</ul>
+
+				<hr class="hrs" />
+				<ul>
+					<li>Object-Oriented Programming(OOP)</li>
+					<li>Data Structures</li>
+					<li>Algorithms</li>
+					<li>SOLID principles</li>
 					<li>Design Patterns</li>
-					<li>Software Design</li>
+				</ul>
+				<hr class="hrs" />
+				<ul>
+					<li>ASP.NET Core web application</li>
+					<li>Clean Architecture</li>
+				</ul>
+				<hr class="hrs" />
+				<ul>
 					<li>HTML</li>
 					<li>CSS</li>
-					<li></li>
 				</ul>
 			</div>
 		</div>
