--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 				<div class="profession">Backend Engineer</div>
 
 				<div class="nav">
-					<a href="mailto:ma7052012@gmail.com">
+					<a href="mailto:m.adel102023@gmail.com">
 						<div class="li">
 							<img
 								src="Images/email.png "
 								width="12px"
 								style="background: white"
 							/>
-							<span>ma7052012@gmail.com</span>
+							<span>m.adel102023@gmail.com</span>
 						</div>
 					</a>
 
